updating favorites page

--- a/favorites.html
+++ b/favorites.html
@@ -268,43 +268,44 @@
             <div>
                 <p class="lead text-white text-center mb-0">
                     Quand je ne bosse pas je joue à des jeux vidéo. j'ai grandi à l'époque de la
-                    <a href="https://fr.wikipedia.org/wiki/Nintendo_Entertainment_System">NES et SNES</a> (super mario
+                    <a href="https://fr.wikipedia.org/wiki/Nintendo_Entertainment_System">NES et de la SNES</a> (super
+                    mario
                     bros, donkey-kong,
-                    castlevania, ninja gaiden, contra, bomberman, ice climbers, duck hunt, pacman, tetris...) A l'époque
-                    c'était
-                    distribué sur
-                    des disques VCD compatibles avec 300 jeux (games 300). J'y jouais avec mon père qui éclatait quand
-                    même bien mes scores. Franchement je pense que j'ai joué à pas mal de trucs et je pourrai jamais
-                    tout citer.
+                    castlevania, ninja gaiden, contra, bomberman, ice climbers, duck hunt, pacman, tetris...). A
+                    l'époque
+                    c'était distribué sur
+                    des disques VCD compatibles avec 300 jeux (games 300). J'y jouais avec mon père, qui éclatait quand
+                    même bien mes scores. Franchement je pense que je pourrai jamais
+                    citer tous les jeux auquels j'ai joué à l'époque.
                 </p>
 
                 <div class="fav-container img-fluid">
-                    <img class="fav-img-wide"
-                        src="https://mario.nintendo.com/static/5173cb58b062e1ec02553be8ed1b8019/b2548/header-mario.png" />
-                    <img class="fav-img-wide" src="https://www.zelda.com/assets/img/home/link_not_roach.png" />
-                    <img class="fav-img" src="" />
+                    <img class="fav-img" src="/assets/pngs/kirby.png" />
+                    <img class="fav-img" src="/assets/pngs/mario.png" />
+                    <img class="fav-img" src="/assets/pngs/sonic.png" />
                 </div>
                 </br>
 
                 <p class="lead text-white text-center mb-0">
-                    J'avais pas les consoles de "riches" (
+                    J'avais pas les consoles de "riches" de l'époque (
                     <a href="https://www.playstation.com/">Playstation</a> et
                     <a href="https://www.xbox.com/">Xbox</a>), donc je
                     m'incrustais avec mes potes
-                    qui en avaient. Quand j'ai découvert les émulateurs (j'avais un PC au moins) ma carrière de pirate
+                    qui en avaient, et Quand j'ai découvert les émulateurs (j'avais un PC) ma carrière de pirate
                     informatique a débuté (lol).
-                    J'avais plus besoin de console (ni de payer). J'ai ainsi découvert ce qui allait devenir mes jeux
-                    favoris (Pokémon, Zelda, Final fantasy...).
+                    J'avais plus besoin de console, ni de payer les jeux. C'est à ce moment que j'ai découvert ce qui
+                    allait devenir mes jeux
+                    favoris (Pokémon, Zelda, Final fantasy, quelque jeux mobiles...).
                 </p>
                 <div class="fav-container img-fluid">
-                    <img class="fav-img" src="" />
-                    <img class="fav-img" src="" />
-                    <img class="fav-img" src="" />
+                    <img class="fav-img" src="/assets/pngs/link.png" />
+                    <img class="fav-img" src="/assets/pngs/lugia.png" />
+                    <img class="fav-img" src="/assets/pngs/balloon.png" />
                 </div>
                 </br>
 
                 <p class="lead text-white text-center mb-0">
-                    Puis J'ai joué gros titres (Skyrim, Fallout, GTA, Assassins creed, far cry, Call of duty...).
+                    Puis J'ai joué aux gros titres (Skyrim, Fallout, GTA, Assassins creed, far cry, Call of duty...).
                     Les consoles que j'ai possédé sont une Gameboy advance et une playstation portable (PSP). Le reste
                     je le fais tourner sur mon PC (légalement ou "non"). Sans plus raconter ma vie, si je dois choisir
                     un seul jeu préféré ça va être quasi-impossible.
@@ -312,14 +313,16 @@
                     fromsoftware (Dark souls, Sekiro, Elden ring...).
                 </p>
                 <div class="fav-container img-fluid">
-                    <img class="fav-img" src="" />
-                    <img class="fav-img" src="" />
-                    <img class="fav-img" src="" />
+                    <img class="fav-img-wide" src="/assets/pngs/alduin.png" />
+                </div>
+                <div class="fav-container img-fluid">
+                    <img class="fav-img-wide" src="/assets/pngs/cuddle.png" />
+                    <img class="fav-img-wide" src="/assets/pngs/gtav.png" />
                 </div>
                 </br>
 
                 <p class="lead text-white text-center mb-0">
-                    Actuellement, je joue plus en ligne et mon jeu "favori" du moment est league of legends.
+                    Actuellement, je joue beaucoup plus en ligne et mon jeu "favori" du moment est league of legends.
                     J'en parle justement ici: <a href="/lol-fanzone.html">League of
                         Legends Fanzone</a>. pour finir cette section je partage quelques platformes célèbres
                     de jeux en ligne où je suis présent: <a href="https://www.twitch.tv/florianXnairolf">Twitch</a>,
@@ -327,7 +330,10 @@
                     <a href="https://steamcommunity.com/profiles/76561198264941556/">Steam</a>.
 
                 </p>
-
+                <div class="fav-container img-fluid">
+                    <img class="fav-img-wide" src="/assets/pngs/wrench.png" />
+                    <img class="fav-img-wide" src="/assets/pngs/undead.png" />
+                </div>
             </div>
         </div>
         </div>
