updating favorites page

--- a/favorites.html
+++ b/favorites.html
@@ -339,6 +339,62 @@
         </div>
     </section>
 
+    <!-- Misc Section-->
+    <section class="page-section bg-secondary text-white mb-0 img-fluid" id="about">
+        <div class="container">
+            <!-- Comment Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Autres</h2>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="las la-random la-2x"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <div>
+                <p class="lead text-white text-center mb-0">
+                    Pour finir, je vais rassemble le reste en une seule section:
+                    Je commence par le troisième truc que j'aime bien: les memes. En 2022 je suppose que tout le monde
+                    sait déjà ce que sait, mais voici quand meme un lien wikipedia: <a
+                        href="https://en.wikipedia.org/wiki/Internet_meme">what is a meme?</a>. J'ai pas vraiment un
+                    meme
+                    favori. On en trouve partout sur internet mais mes sources favorites sont
+                    <a href="https://9gag.com/u/dead_medic">9gag</a>,
+                    <a href="https://www.reddit.com/user/florian32edem">Reddit</a> et
+                    <a href="https://twitter.com/FlorianEdemessi">twitter</a> (facebook aussi peut-être).
+
+                </p>
+                <div class="fav-container img-fluid">
+                    <img class="fav-img-wide" src="/assets/memes/pepedealer.jpg" />
+                </div>
+                <br>
+                <p class="lead text-white text-center mb-0">
+                    Après j'aime bien les anime et les manga, mais je pense développer ça autrement.
+                    J'ai un compte <a href="https://anilist.co/user/nairolf32/">anilist</a> si ça interesse
+                    quelqu'un. Pour la musique je vais pas encore détailler mais mon truc c'est rap, hip-hop,
+                    et quelques genres exceptionels (indie, rock...). J'ai aussi un compte <a
+                        href="https://open.spotify.com/user/p0lf8wnowbzwy9nxc76tuh4fv?si=5b3591b58b3f46c4">spotify</a>.
+
+                    <br>
+                    Je vais terminer en me faisant le maximum d'ennemis possibles, en donnant mon opinion:
+                    android > apple, linux > windows, coca-cola > pepsi, on dit pain-au-chocolat et non chocolatine,
+                    le lait avant les céréales, certainement l'oeuf avant la poule, rouge > bleu, messi et christiano
+                    c'est pareil pour moi, et malheureusement je préfère les anime aux manga.
+                    <br>
+                    Bon c'est certain que je vais modifier cette page plus tard. J'ai plein de trucs à détailler et à
+                    ajouter
+                    (films, series, comics...) mais pour le moment, grosse flemme.
+
+
+
+
+                </p>
+
+            </div>
+        </div>
+        </div>
+    </section>
+
+
     <!-- GTranslate: https://gtranslate.io/ -->
     <div class="page-section d-flex align-items-center flags bg-secondary justify-content-center">
         <a href="#" onclick="doGTranslate('fr|ar');return false;" title="Arabic" class="gflag nturl"
