--- a/favorites.html
+++ b/favorites.html
@@ -135,8 +135,8 @@
                 favoris. Comme j'aime bien lister et rassembler des trucs, vous allez peut-être trouver
                 quelque chose qui vous intéresse aussi. Je vais séparer par catégories (parce que j'aime bien
                 organiser). En fait cette page me sert un peu de repère à moi même, afin de
-                facilement retrouver des liens vers, par exemple, mes outils de développement favoris. Vu que les goûts
-                peuvent changer il se peut que je modifie cette page parfois...mais bon globalement ça va pas trop
+                facilement retrouver des liens vers, par exemple, mes outils de développement favoris. Il se peut que je
+                modifie cette page parfois...mais bon globalement ça va pas trop
                 changer.
             </p>
         </div>
@@ -171,25 +171,26 @@
                     Pour le web le
                     <a href="https://developer.mozilla.org/fr/docs/Web/HTML">HTML</a>,
                     <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_CSS">CSS</a>, <a
-                        href="https://developer.mozilla.org/fr/docs/Web/JavaScript">JavaScript</a> sont un
-                    trio
-                    incontournable. Puis j'ai découvert le backend web avec<a href="https://www.php.net/">PHP</a>.
-                    Enfin, je me suis mis
-                    au mobile
-                    natif avec java qui se fait progressivement "remplacer" par <a
+                        href="https://developer.mozilla.org/fr/docs/Web/JavaScript">JavaScript</a> fut un
+                    trio incontournable. Puis j'ai testé le backend web avec <a href="https://www.php.net/">PHP</a> et
+                    Enfin, je suis retourné
+                    au mobile natif avec java qui se fait progressivement "remplacer" par <a
                         href="https://kotlinlang.org/">Kotlin</a>. Notez comment
                     j'ai jamais
-                    touché à IOS (swift, objective-c). C'est important! J'ai aussi touché au <a
-                        href="https://fr.wikipedia.org/wiki/C_sharp">C#</a>
+                    touché à IOS avec son <a href="https://www.swift.org/">Swift</a>, son
+                    <a href="https://en.wikipedia.org/wiki/Objective-C">objective-c</a> et toutes leurs autres choses
+                    là.
+                    Par contre j'ai aussi touché au <a href="https://fr.wikipedia.org/wiki/C_sharp">C#</a>
                     pour des projets mini-jeux vidéos. Je compte apprendre un peu de <a href="https://go.dev/">Go</a>
-                    aussi.
-                    </br>
+                    aussi. </br>
                     Actuellement je m'intéressse particulièrement au développement web moderne avec divers frameworks
                     javascript
-                    (React, Angular, Vue, ...), mais surtout le développement cross-platform avec comme favori
+                    (<a href="https://fr.reactjs.org/">React</a>, <a href="https://angular.io/">Angular</a>,
+                    <a href="https://vuejs.org/">Vue</a>) mais surtout le développement
+                    cross-platform avec comme favori
                     <a href="https://flutter.dev/">Flutter</a>. L'idée d'une
-                    seule base de code
-                    pour plusieurs plateformes me plait beaucoup, même si certains évoquent la faible performance.
+                    seule base de code pour plusieurs plateformes me plait beaucoup, même si certains évoquent la faible
+                    performance.
                     Bon, On retient clairement que j'ai pas de préférence réelle pour un langage mais je pense avoir
                     dégagé quelques favoris.
                 </p>
@@ -207,11 +208,11 @@
                 <p class="lead text-white text-center mb-0">
                     Ensuite, j'ai tendance à faire mes assets moi meme (je suis nul en vrai, je devrais penser à payer
                     un professionel). Pour mes graphiques j'utilise <a
-                        href="https://www.adobe.com/fr/products/photoshop.html">Photoshop</a> et <a
-                        href="https://www.adobe.com/fr/products/illustrator.html">Illustrator</a>.
+                        href="https://www.adobe.com/fr/products/photoshop.html">Photoshop</a>
+                    et <a href="https://www.adobe.com/fr/products/illustrator.html">Illustrator</a>.
                     (versions plus ou moins légales), Pour aller vite
                     <a href="https://www.canva.com/">Canva</a>, et
-                    pour la 3D j'utilise <a href="https://www.blender.org/">Blender</a>
+                    pour la 3D j'essaie <a href="https://www.blender.org/">Blender</a>
                 </p>
                 <div class="fav-container img-fluid">
                     <img class="fav-img"
