--- a/index.html
+++ b/index.html
@@ -141,12 +141,24 @@
     </header>
     <!-- Portfolio Section-->
     <section class="page-section portfolio" id="portfolio">
+        <!-- Portfolio Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-white">Portfolio</h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="las la-suitcase la-2x"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+        <p class="lead text-center text-white">Cliquez sur l'image ci dessous pour voir mon portfolio</p>
         <div class="container">
             <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
                 <!-- Portfolio Item -->
                 <div class="photo-container">
-                    <img class="img-fluid photo" src="assets/img/portfolio/self.png" alt="EDEMESSI_FLorian_nairolf32" />
+                    <a href="https://nair0lf32.github.io/portfolio" role="button">
+                        <img class="img-fluid photo" src="assets/img/portfolio/self.png"
+                            alt="EDEMESSI_FLorian_nairolf32" />
+                    </a>
                 </div>
             </div>
     </section>
@@ -194,8 +206,7 @@
                         jeu. Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html"
                             role="button">ici</a>.
                         Si vous voulez voir mes projets pros, je bosse actuellement sur mon
-                        portfolio que vous pouvez voir en cliquant sur ce lien: <a
-                            href="https://nair0lf32.github.io/portfolio" role="button"> Mon Portfolio </a>
+                        portfolio que vous pouvez voir en cliquant sur l'image au dessus.
 
                         <br><br><br>
                         <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
@@ -255,7 +266,8 @@
                     <p class="contacts font-weight-light mb-0">
                         mail: florianedem@gmail.com </br></pbr>
                         tel: (+229) 67242336 </br>
-                        télépathie/vaudou: Je déconne j'ai pas ce réseau là ( les utilisateurs me contactez pas svp )
+                        télépathie/vaudou: Je déconne j'ai pas ce réseau là
+                        ( les utilisateurs me contactez pas svp )
                     </p>
 
                 </div>
