--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div id='metype-container' class='iframe-container' data-metype-account-id='1000949'
                 data-metype-host='https://www.metype.com/' data-metype-primary-color='#0000ff'
                 data-metype-bg-color='#ffffff' data-metype-font-color='#4a4a4a'></div>
-            <script type='text/javascript'>
+            <script defer type='text/javascript'>
                 var metypeContainer = document.getElementById("metype-container"),
                     page_url = metypeContainer.getAttribute("data-metype-page-url");
                 metypeContainer.setAttribute('data-metype-page-url', page_url || window.location.href);
@@ -266,8 +266,9 @@
                     <p class="contacts font-weight-light mb-0">
                         mail: florianedem@gmail.com </br></pbr>
                         tel: (+229) 67242336 </br>
-                        télépathie/vaudou: Je déconne j'ai pas ce réseau là
-                        ( les utilisateurs me contactez pas svp )
+                        vaudou: Je déconne j'ai pas ce réseau là <br>
+                        ( les utilisateurs me contactez pas svp ) <br>
+                        Vous pouvez aussi voir ma page <a href="https://about.me/florian_edemessi">about.me</a>
                     </p>
 
                 </div>
@@ -304,7 +305,7 @@
                 <div class="col-lg-4">
                     <h4 class="text-lowercase mb-0">Ce site web est alimenté par github pages et bootstrap</h4>
                     <p class="lead mb-0">
-                        Freelance est un thème Bootstrap gratuit, sous license MIT créé par
+                        Thème: Freelance. Thème Bootstrap gratuit, sous license MIT créé par
                         <a href="http://startbootstrap.com">Start Bootstrap</a>
                     </p>
                 </div>
