--- a/favorites.html
+++ b/favorites.html
@@ -136,8 +136,7 @@
                 quelque chose qui vous intéresse aussi. Je vais séparer par catégories (parce que j'aime bien
                 organiser). En fait cette page me sert un peu de repère à moi même, afin de
                 facilement retrouver des liens vers, par exemple, mes outils de développement favoris. Il se peut que je
-                modifie cette page parfois...mais bon globalement ça va pas trop
-                changer.
+                modifie cette page parfois...mais bon globalement ça va pas trop changer.
             </p>
         </div>
     </header>
@@ -159,39 +158,24 @@
                     Il n'y a pas vraiment de langage ou d'outil meilleur qu'un autre, vu que chacun sert à
                     un but précis. J'ai utilisé pas mal de langages et outils (sans vraiment les maitriser totalement,
                     mais actuellement je cherche à me concentrer dans un domaine précis). Je me suis interressé à la
-                    programmation
-                    avec des potes du collège et On avait pour objectif de faire un jeu vidéo (mdr). On a vite compris
-                    que c'était pas
-                    simple. Ce qui explique que mon tout premier langage fut le <a
-                        href="https://fr.wikipedia.org/wiki/C%2B%2B">C++</a>. J'ai immédiatement basculé vers <a
-                        href="https://www.java.com/fr/download/">Java</a>
-                    puis <a href="https://www.python.org/">Python</a> qui on peut
+                    programmation avec des potes du collège et On avait pour objectif de faire un jeu vidéo (mdr). On a vite compris
+                    que c'était pas simple. Ce qui explique que mon tout premier langage fut le <a href="https://fr.wikipedia.org/wiki/C%2B%2B">C++</a>. 
+                    J'ai immédiatement basculé vers <a href="https://www.java.com/fr/download/">Java</a> puis <a href="https://www.python.org/">Python</a> qui on peut
                     dire reste un de mes favoris. Il est simple mais polyvalent, surtout si on se soucie peu de la
-                    performance.
-                    Pour le web le
-                    <a href="https://developer.mozilla.org/fr/docs/Web/HTML">HTML</a>,
-                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_CSS">CSS</a>, <a
-                        href="https://developer.mozilla.org/fr/docs/Web/JavaScript">JavaScript</a> fut un
+                    performance. Pour le web le <a href="https://developer.mozilla.org/fr/docs/Web/HTML">HTML</a>,
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_CSS">CSS</a>, <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript">JavaScript</a> fut un
                     trio incontournable. Puis j'ai testé le backend web avec <a href="https://www.php.net/">PHP</a> et
-                    Enfin, je suis retourné
-                    au mobile natif avec java qui se fait progressivement "remplacer" par <a
-                        href="https://kotlinlang.org/">Kotlin</a>. Notez comment
-                    j'ai jamais
-                    touché à IOS avec son <a href="https://www.swift.org/">Swift</a>, son
-                    <a href="https://en.wikipedia.org/wiki/Objective-C">objective-c</a> et toutes leurs autres choses
-                    là.
+                    Enfin, je suis retourné au mobile natif avec java qui se fait progressivement "remplacer" par <a href="https://kotlinlang.org/">Kotlin</a>. Notez comment
+                    j'ai jamais touché à IOS avec son <a href="https://www.swift.org/">Swift</a>, son
+                    <a href="https://en.wikipedia.org/wiki/Objective-C">objective-c</a> et toutes leurs autres choses payantes là.
                     Par contre j'ai aussi touché au <a href="https://fr.wikipedia.org/wiki/C_sharp">C#</a>
                     pour des projets mini-jeux vidéos. Je compte apprendre un peu de <a href="https://go.dev/">Go</a>
-                    aussi. </br>
-                    Actuellement je m'intéressse particulièrement au développement web moderne avec divers frameworks
-                    javascript
-                    (<a href="https://fr.reactjs.org/">React</a>, <a href="https://angular.io/">Angular</a>,
-                    <a href="https://vuejs.org/">Vue</a>) mais surtout le développement
-                    cross-platform avec comme favori
-                    <a href="https://flutter.dev/">Flutter</a>. L'idée d'une
-                    seule base de code pour plusieurs plateformes me plait beaucoup, même si certains évoquent la faible
-                    performance.
-                    Bon, On retient clairement que j'ai pas de préférence réelle pour un langage mais je pense avoir
+                    aussi. </br> Actuellement je m'intéressse particulièrement au développement web moderne avec divers frameworks
+                    javascript (<a href="https://fr.reactjs.org/">React</a>, <a href="https://angular.io/">Angular</a>,
+                    <a href="https://vuejs.org/">Vue</a>) mais surtout le développement cross-platform avec comme favori
+                    <a href="https://flutter.dev/">Flutter</a>. L'idée d'une seule base de code pour plusieurs plateformes me plait beaucoup, 
+                    même si certains évoquent la faible
+                    performance. Bon, On retient clairement que j'ai pas de préférence réelle pour un langage mais je pense avoir
                     dégagé quelques favoris.
                 </p>
 
@@ -246,9 +230,8 @@
                     Pour aller plus vite.
                     <br>
                     Enfin, je termine cette partie par mon nouveau truc: la cybersécurité! Ici je vais pas détailler mes
-                    outils favoris.
-                    Je le fais déjà dans mon dépot github réservé à çà: <a
-                        href="https://github.com/nair0lf32/ctfs-writeups">Ctf-writeups!</a>
+                    outils favoris. Je le fais déjà sur mon blog réservé à çà: <a
+                        href="https://nair0lf32.github.io/zer0ne/">Zer0ne</a>
                 </p>
             </div>
         </div>
@@ -270,14 +253,9 @@
                 <p class="lead text-white text-center mb-0">
                     Quand je ne bosse pas je joue à des jeux vidéo. j'ai grandi à l'époque de la
                     <a href="https://fr.wikipedia.org/wiki/Nintendo_Entertainment_System">NES et de la SNES</a> (super
-                    mario
-                    bros, donkey-kong,
-                    castlevania, ninja gaiden, contra, bomberman, ice climbers, duck hunt, pacman, tetris...). A
-                    l'époque
-                    c'était distribué sur
-                    des disques VCD compatibles avec 300 jeux (games 300). J'y jouais avec mon père, qui éclatait quand
-                    même bien mes scores. Franchement je pense que je pourrai jamais
-                    citer tous les jeux auquels j'ai joué à l'époque.
+                    mario bros, donkey-kong, castlevania, ninja gaiden, contra, bomberman, ice climbers, duck hunt, pacman, tetris...).
+                    A l'époque c'était distribué sur des disques VCD compatibles avec 300 jeux (games 300). J'y jouais avec mon père, qui éclatait quand
+                    même bien mes scores. Franchement je pense que je pourrai jamais citer tous les jeux auquels j'ai joué à l'époque.
                 </p>
 
                 <div class="fav-container img-fluid">
@@ -353,12 +331,11 @@
             </div>
             <div>
                 <p class="lead text-white text-center mb-0">
-                    Pour finir, je vais rassemble le reste en une seule section:
+                    Pour finir, je vais rassembler le reste en une seule section:
                     Je commence par le troisième truc que j'aime bien: les memes. En 2022 je suppose que tout le monde
                     sait déjà ce que sait, mais voici quand meme un lien wikipedia: <a
                         href="https://en.wikipedia.org/wiki/Internet_meme">what is a meme?</a>. J'ai pas vraiment un
-                    meme
-                    favori. On en trouve partout sur internet mais mes sources favorites sont
+                    meme favori. On en trouve partout sur internet mais mes sources favorites sont
                     <a href="https://9gag.com/u/dead_medic">9gag</a>,
                     <a href="https://www.reddit.com/user/florian32edem">Reddit</a> et
                     <a href="https://twitter.com/FlorianEdemessi">twitter</a> (facebook aussi peut-être).
@@ -377,16 +354,20 @@
 
                     <br>
                     Je vais terminer en me faisant le maximum d'ennemis possibles, en donnant mon opinion:
-                    android > apple, linux > windows, coca-cola > pepsi, on dit pain-au-chocolat et non chocolatine,
-                    le lait avant les céréales, certainement l'oeuf avant la poule, rouge > bleu, messi et christiano
-                    c'est pareil pour moi, et malheureusement je préfère les anime aux manga.
+
+                    <ul class="lead mx-auto w-50">
+                        <li>android > apple</li>
+                        <li>linux > windows</li>
+                        <li>coca > pepsi</li>
+                        <li>rouge > bleu</li>
+                        <li>anime > manga</li>
+                        <li>frittes > alloco (tuez moi)</li>
+                    </ul>
+
+                    On dit pain-au-chocolat et non chocolatine, Le lait avant les céréales, certainement l'oeuf avant la poule, messi et christiano
+                    c'est pareil pour moi...
                     <br>
-                    Bon c'est certain que je vais modifier cette page plus tard. J'ai plein de trucs à détailler et à
-                    ajouter
-                    (films, series, comics...) mais pour le moment, grosse flemme.
-
-
-
+                    Bon c'est certain que je vais modifier cette page plus tard. J'ai plein de trucs à détailler et à ajouter (films, series, comics...) mais pour le moment, grosse flemme.
 
                 </p>
 
