--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-white fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">nair0lf32</a>
+            <a class="navbar-brand" href="/index.html">nair0lf32</a>
             <button class="navbar-toggler text-lowercase font-weight-bold bg-primary text-white rounded" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
