--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -95,7 +95,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-white fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">nair0lf32</a>
+            <a class="navbar-brand" href="/index.html">nair0lf32</a>
             <button class="navbar-toggler text-lowercase font-weight-bold bg-primary text-white rounded" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -104,8 +104,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/index.html">Accueil</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">A
                             propos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
